# mcvine

./: .gitignore  .travis.yml  API.html  CLI.html  CMakeLists.txt  Components.html  Demos.html  DeveloperGuide.html  DevelopmentNotes.html  Documentation.html  Examples-ARCSsimulation-old.html  Examples-ARCSsimulation.html  Extend.html  FAQ.html  Fundamentals.html  Installation.html  Introduction.html  KernelImplementation.html  LICENSE  Make.mm  Misc.html  News.html  ParallelComputing.html  Philosophy.html  Problems.html  Publications.html  README.md  SampleAssembly.html  Tutorials-PowderKernel.html  Tutorials-SampleAssembly.html  Tutorials-Vulcan.html  Tutorials-basics.html  Tutorials.html  UserGuide.html  WebApp.html  Workflows.html  build-gh-pages  buildme  debug.html  environment.yml  (+11 more)
.github/workflows/: CI.yml  workflow.yml
_sources/: API.rst.txt  CLI.rst.txt  CLI.txt  DeveloperGuide.rst.txt  DeveloperGuide.txt  DevelopmentNotes.txt  Examples-ARCSsimulation.txt  FAQ.txt  Installation.rst.txt  Installation.txt  KernelImplementation.rst.txt  Misc.rst.txt  News.rst.txt  News.txt  Problems.txt  Publications.rst.txt  Publications.txt  SampleAssembly.rst.txt  SampleAssembly.txt  Tutorials-SampleAssembly.rst.txt  Tutorials-Vulcan.txt  Tutorials.rst.txt  UserGuide.rst.txt  WebApp.rst.txt  Workflows.rst.txt  debug.txt  index.txt  mcstas.txt  release-notes.rst.txt  release-notes.txt
_sources/instruments/: ARCS.txt
_sources/kernels/: CoherentInelasticPhononScattering_SingleXtal.txt  CoherentInelasticPhonon_PolyXtal.txt  ConstantQE.txt  E_Q.rst.txt  E_vQ.txt  IncoherentInelasticPhonon_PolyXtal.rst.txt  IncoherentInelasticPhonon_PolyXtal.txt  SQE.rst.txt  SimplePowderDiffraction.txt  kernels.rst.txt  kernels.txt
_sources/releases/: rel1.txt
_static/: classic.css  default.css
builders/: CmakeNotes.md  CondaNotes.md  README.md  SetupDevEnvAtAWS.md  build  build-conda-pkg-using-docker  conda_notes  get-resources  gh-pages  mcvine-dev.yml  runtests-CMakeLists.txt  sim-travis.sh  test  update-resources
builders/CI/: build_and_test.sh  buildspec.yaml  install-conda.sh
builders/CI/conda-recipe/: build.sh  conda_build_config.yaml  create_meta_yaml  meta.yaml  meta.yaml.template  meta.yml  run_test.py
builders/aws-codebuild/: build_and_test.sh  buildspec.yaml  install-conda.sh
builders/aws-codebuild/conda-recipe/: build.sh  conda_build_config.yaml  meta.yaml.template  run_test.py
builders/conda/: README.md  build.sh  meta.yaml  meta.yaml.template  run_test.py
builders/dev/: README.md  envs.sh  mcvine-dev.yml
builders/dev/obsolete/: example.dev-mcvine
builders/docker/: README
builders/nersc/: .build-mcvine  .dev-mcvine  .use-mcvine  build
builders/nersc/danse/: setup-all.sh  setup.sh
builders/notes/: SetupDevEnvAtAWS.md
builders/obsolete/test-release/: CMakeLists.txt
builders/recipes/: TODO
builders/recipes/fermi@ornl/: .build-mcvine  .dev-mcvine  README  build-mcvine.sh  install-deps
builders/recipes/nersc/: .build-mcvine  .use-mcvine  README  install-deps
builders/runtests/: CMakeLists.txt  README.md  test.py
builders/travis-conda/: build.sh  conda_build_config.yaml  meta.yaml.template  run-travis-build.sh  run_test.py
cmake/: TestUtils.cmake  envs.sh  list_pytests.py
docs/DeveloperGuide/: invalid%N$usedetected
docs/DeveloperGuide/figures/: InstrumentSimulationApp-MainLoop.dia
docs/UserGuide/figures/: procedure-of-simulation-I.dia
docs/dev/: ubuntu-14.04
docs/sphinx/: CLI.rst  Components.rst  Demos.rst  DeveloperGuide.rst  DevelopmentNotes.rst  Documentation.rst  Examples-ARCSsimulation-old.rst  Examples-ARCSsimulation.rst  Extend.rst  FAQ.rst  Fundamentals.rst  Installation.rst  Introduction.rst  KernelImplementation.rst  Make.mm  Makefile  News.rst  ParallelComputing.rst  Philosophy.rst  Problems.rst  Publications.rst  README-dev  SampleAssembly.rst  Tutorials-PowderKernel.rst  Tutorials-SampleAssembly.rst  Tutorials-basics.rst  Tutorials.rst  UserGuide.rst  Workflows.rst  conf.py  index.rst  mcstas.rst  release-notes.rst
docs/sphinx/_static/: default.css
docs/sphinx/_templates/: layout.html
docs/sphinx/examples/: Make.mm
docs/sphinx/images/: class-diagrams.dia  sample-assembly.xcf
docs/sphinx/instruments/: ARCS.rst
docs/sphinx/kernels/: .gitignore  CoherentInelasticPhonon_PolyXtal.rst  ConstantEnergyTransfer.rst  E_vQ.rst  IncoherentElasticPhonon_PolyXtal.rst  IncoherentInelasticPhonon_PolyXtal.rst  Isotropic.rst  SQE.rst  SimplePowderDiffraction.rst  kernels.rst  list.py
docs/trac-wiki/: InstallationOverview  SoftwareOrganization  UserFAQ  UserGuide  UserGuide-AdditionalResources  mccomponents
gui/: create-dom-objs-and-orm-actors.py
gui/cgi-bin/: main.py
gui/config/: Make.mm  SimpleHttpServer.pml  clerk.odb  clerk.pml  initdb.pml  instrument-configuration-creator.odb  main.pml  mcvine-uiapp-ext.odb  web-weaver-library.pml
gui/content/: Make.mm
gui/log/: Make.mm
gui/mcvineui/: Make.mm  ScriptBase.py  __init__.py
instruments/: ARCS.html  CMakeLists.txt  Make.mm  Simple2.py
instruments/ARCS/: CMakeLists.txt  Make.mm  README
instruments/CNCS/: CMakeLists.txt  Make.mm
instruments/HYSPEC/: CMakeLists.txt  Make.mm  README
instruments/SANS/: Make.mm  README
instruments/SEQUOIA/: CMakeLists.txt  Make.mm  README
instruments/SMARTS/: Make.mm
instruments/SNS/: CMakeLists.txt  Make.mm
instruments/VULCAN/: Make.mm  TODO  vulcan  vulcan-hint.pml
instruments/generic/: CMakeLists.txt  Make.mm  README
kernels/: CoherentInelasticPhononScattering_SingleXtal.html  CoherentInelasticPhonon_PolyXtal.html  ConstantEnergyTransfer.html  ConstantQE.html  E_Q.html  E_vQ.html  IncoherentElasticPhonon_PolyXtal.html  IncoherentInelasticPhonon_PolyXtal.html  Isotropic.html  SQE.html  SimplePowderDiffraction.html  kernels.html
releases/: rel1.html
samples/NickelPlate/: Ni plate-scatterer.xml  Ni.xml  README  plotSQE.py
tests/logger/: mcvine.conf  test.sh
web/: Make.mm
web/cgi-bin/: Make.mm
web/config/: journal.pml  librarian.pml  main.pml  web-weaver.pml
web/html/: Make.mm  css
web/mcvineui/: Make.mm
(+747 files in other folders)
